--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <!-- Java EE -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
         <!--Web-->
         <dependency>
             <groupId>javax.servlet</groupId>
